--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,7 @@
                 <a class="breadcrumbs__link" href="index.html"><span class="visually-hidden">Главная.</span></a>
               </li>
               <li class="breadcrumbs__item">
-                <span class="breadcrumbs__link">Гостиницы</span>
+                <span class="breadcrumbs__link breadcrumbs__link--current">Гостиницы</span>
               </li>
             </ol>
             <form class="catalog-header__form filter" action="https://echo.htmlacademy.ru/" method="get"
@@ -111,10 +111,12 @@
                 <legend class="filter__title">Стоимость, ₽:</legend>
                 <div class="range__inputs">
                   <label class="range__label">
-                    <input class="range__input range__input--min input" type="number" value="0" name="min-price">
+                    <span class="range__input-text">от</span>
+                    <input class="range__input range__input--min input" type="text" inputmode="numeric" value="0" name="min-price">
                   </label>
                   <label class="range__label">
-                    <input class="range__input range__input--max input" type="number" value="9000" name="max-price">
+                    <span class="range__input-text">до</span>
+                    <input class="range__input range__input--max input" type="text" inputmode="numeric" value="9000" name="max-price">
                   </label>
                 </div>
                 <div class="range__scale">
