--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <ul class="advantages__list">
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Настоящий  городок </p>
+                <p class="advantages__title third-title">Настоящий&nbsp;  городок</p>
                 <p class="advantages__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
@@ -105,7 +105,7 @@
           <ul class="services__list">
             <li class="services__item services__item--home">
               <p class="services__title third-title">Жильё</p>
-              <p class="services__description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+              <p class="services__description">Рекомендуем пожить<br> в настоящем мотеле,&nbsp;<br> всё как в кино!</p>
             </li>
             <li class="services__item services__item--eat">
               <p class="services__title third-title">Еда</p>
@@ -113,7 +113,7 @@
             </li>
             <li class="services__item services__item--gift">
               <p class="services__title third-title">Сувениры</p>
-              <p class="services__description">Не только китайского,<br> но и настоящего местного производства!</p>
+              <p class="services__description">Не только китайского,&nbsp;<br> но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
