--- a/index-modal.html
+++ b/index-modal.html
@@ -187,33 +187,42 @@
             <div class="search-form__group">
               <label class="search-form__label" for="search-form-check-in">Дата заезда:</label>
               <input class="search-form__input search-form__input--date input" type="text" name="search-check-in"
-                id="search-form-check-in" placeholder="27 апреля 2020">
+                id="search-form-check-in" value="27 апреля 2020">
               <small class="search-form__message search-form__message--error">Мы не можем отправить вас в
                 прошлое.</small>
             </div>
             <div class="search-form__group">
               <label class="search-form__label" for="search-form-check-out">Дата выезда:</label>
               <input class="search-form__input search-form__input--date input" type="text" name="search-check-out"
-                id="search-form-check-out" placeholder="1 сентября 2023">
+                id="search-form-check-out" value="1 сентября 2023">
               <small class="search-form__message">На эти даты есть свободные номера. Пока есть.</small>
             </div>
-            <div class="search-form__group">
+            <div class="search-form__group search-form__group--family">
               <label class="search-form__label" for="search-form-adults">Взрослые:</label>
               <div class="search-form__quantity">
-                <button class="search-form__quantity-button search-form__quantity-button--minus"></button>
+                <button class="search-form__quantity-button search-form__quantity-button--less" type="button"></button>
                 <input class="search-form__input  search-form__input--family input" type="text" inputmode="numeric"
-                  name="search-adults" id="search-form-adults" placeholder="2">
-                <button class="search-form__quantity-button search-form__quantity-button--plus"></button>
+                  name="search-adults" id="search-form-adults" value="2">
+                <button class="search-form__quantity-button search-form__quantity-button--more" type="button"></button>
               </div>
-              <div class="search-form__label search-form__label--kids">
+            </div>
+            <div class="search-form__group search-form__group--family">
+              <div class="search-form__label">
                 <label for="search-form-kids">Дети:</label>
-                <button class="search-form__tooltip"></button>
+                <span class="search-form__tooltip tooltip">
+                  <button class="tooltip__toggle" type="button">
+                    <span class="visually-hidden">Показать дополнительную информацию</span>
+                  </button>
+                  <span class="tooltip__text">
+                    Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
+                  </span>
+                </span>
               </div>
               <div class="search-form__quantity">
-                <button class="search-form__quantity-button search-form__quantity-button--minus"></button>
+                <button class="search-form__quantity-button search-form__quantity-button--less" type="button"></button>
                 <input class="search-form__input search-form__input--family  input" type="text" inputmode="numeric"
-                  name="search-kids" id="search-form-kids" placeholder="2">
-                <button class="search-form__quantity-button search-form__quantity-button--plus"></button>
+                  name="search-kids" id="search-form-kids" value="2">
+                <button class="search-form__quantity-button search-form__quantity-button--more" type="button"></button>
               </div>
             </div>
             <button class="search-form__button button button--second" type="submit">Найти</button>
