Завершил вёрстку модального окна Изменил механизм назначения цвета маскам на currentColor

--- a/catalog.html
+++ b/catalog.html
@@ -121,8 +121,12 @@
                 </div>
                 <div class="range__scale">
                   <div class="range__bar" style="right: 62px; width: 226px;">
-                    <button class="range__toggle range__toggle--min" type="button"></button>
-                    <button class="range__toggle range__toggle--max" type="button"></button>
+                    <button class="range__toggle range__toggle--min" type="button">
+                      <span class="visually-hidden">Изменить минимальную цену</span>
+                    </button>
+                    <button class="range__toggle range__toggle--max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену</span>
+                    </button>
                   </div>
                 </div>
               </fieldset>
