--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -88,20 +89,20 @@
                 <ul class="filter__list">
                   <li class="filter__item">
                     <label class="control">
-                      <input class="control__input visually-hidden" type="radio" name="product-grout" value="hotel"
+                      <input class="control__input visually-hidden" type="radio" name="product-group" value="hotel"
                         checked>
                       <span class="control__label">Гостиница</span>
                     </label>
                   </li>
                   <li class="filter__item">
                     <label class="control">
-                      <input class="control__input visually-hidden" type="radio" name="product-grout" value="motel">
+                      <input class="control__input visually-hidden" type="radio" name="product-group" value="motel">
                       <span class="control__label">Мотель</span>
                     </label>
                   </li>
                   <li class="filter__item">
                     <label class="control">
-                      <input class="control__input visually-hidden" type="radio" name="product-grout" value="appart">
+                      <input class="control__input visually-hidden" type="radio" name="product-group" value="appart">
                       <span class="control__label">Апартаменты</span>
                     </label>
                   </li>
@@ -122,10 +123,10 @@
                 <div class="range__scale">
                   <div class="range__bar" style="right: 62px; width: 226px;">
                     <button class="range__toggle range__toggle--min" type="button">
-                      <span class="visually-hidden">Изменить минимальную цену</span>
+                      <span class="visually-hidden">Изменить минимальную цену.</span>
                     </button>
                     <button class="range__toggle range__toggle--max" type="button">
-                      <span class="visually-hidden">Изменить максимальную цену</span>
+                      <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
                 </div>
@@ -151,13 +152,13 @@
               </select>
 
               <div class="sorting__view">
-                <a class="sorting__toggle sorting__toggle--table sorting__toggle--current" href="#">
+                <a class="sorting__toggle sorting__toggle--table sorting__toggle--current" href="catalog.html?view=tile">
                   <span class="visually-hidden">Таблица.</span>
                 </a>
-                <a class="sorting__toggle sorting__toggle--gallery" href="#">
+                <a class="sorting__toggle sorting__toggle--gallery" href="catalog.html?view=card">
                   <span class="visually-hidden">Галерея.</span>
                 </a>
-                <a class="sorting__toggle sorting__toggle--list" href="#">
+                <a class="sorting__toggle sorting__toggle--list" href="catalog.html?view=list">
                   <span class="visually-hidden">Список.</span>
                 </a>
               </div>
@@ -276,17 +277,17 @@
         <div class="page-footer__wrapper wrapper">
           <ul class="page-footer__list socials">
             <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="#">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--tg" href="#">
+              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy ">
                 <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--yt" href="#">
+              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
@@ -294,7 +295,7 @@
           <address class="page-footer__address address">
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-          <a class="page-footer__copyright" href="#">
+          <a class="page-footer__copyright" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
