--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -40,7 +41,7 @@
                 </a>
               </li>
               <li class="user-nav__item">
-                <a class="user-nav__button button button--basic" href="catalog.html">Хочу сюда!</a>
+                <a class="user-nav__button button button--basic" href="#">Хочу сюда!</a>
               </li>
             </ul>
           </nav>
@@ -147,17 +148,17 @@
         <div class="page-footer__wrapper wrapper">
           <ul class="page-footer__list socials">
             <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="#">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--tg" href="#">
+              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy ">
                 <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--yt" href="#">
+              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
@@ -165,7 +166,7 @@
           <address class="page-footer__address address">
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-          <a class="page-footer__copyright" href="#">
+          <a class="page-footer__copyright" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
