Улучшил элементы форм

--- a/catalog.html
+++ b/catalog.html
@@ -113,11 +113,11 @@
                 <div class="range__inputs">
                   <label class="range__label">
                     <span class="range__input-text">от</span>
-                    <input class="range__input range__input--min input" type="text" inputmode="numeric" value="0" name="min-price">
+                    <input class="range__input range__input--min input" type="text" inputmode="numeric" placeholder="0" value="0" name="min-price" required>
                   </label>
                   <label class="range__label">
                     <span class="range__input-text">до</span>
-                    <input class="range__input range__input--max input" type="text" inputmode="numeric" value="9000" name="max-price">
+                    <input class="range__input range__input--max input" type="text" inputmode="numeric" placeholder="10000" value="9000" name="max-price" required>
                   </label>
                 </div>
                 <div class="range__scale">
