Проверил проект по критериям и чек-листу

--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -277,17 +276,17 @@
         <div class="page-footer__wrapper wrapper">
           <ul class="page-footer__list socials">
             <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy ">
+              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
@@ -295,7 +294,7 @@
           <address class="page-footer__address address">
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-          <a class="page-footer__copyright" href="https://htmlacademy.ru/">
+          <a class="page-footer__copyright" href="https://htmlacademy.ru/" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
