--- a/index-modal.html
+++ b/index-modal.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -151,17 +150,17 @@
         <div class="page-footer__wrapper wrapper">
           <ul class="page-footer__list socials">
             <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy ">
+              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru" target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
@@ -169,7 +168,7 @@
           <address class="page-footer__address address">
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-          <a class="page-footer__copyright" href="https://htmlacademy.ru/">
+          <a class="page-footer__copyright" href="https://htmlacademy.ru/" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
@@ -185,6 +184,7 @@
         <section class="modal__content">
           <h2 class="modal__title second-title">Поиск гостиницы в Седоне</h2>
           <form class="modal__form search-form" action="https://echo.htmlacademy.ru/" method="post" id="search-form">
+
             <label class="search-form__group search-form__group--date" for="search-form-check-in">
               <span class="search-form__label">Дата заезда:</span>
               <input class="search-form__input search-form__input--date input" type="text" name="search-check-in"
@@ -192,6 +192,7 @@
               <small class="search-form__message search-form__message--error">Мы не можем отправить вас в
                 прошлое.</small>
             </label>
+
             <label class="search-form__group search-form__group--date">
               <span class="search-form__label">Дата выезда:</span>
               <input class="search-form__input search-form__input--date input" type="text" name="search-check-out"
@@ -212,6 +213,7 @@
                 </button>
               </div>
             </div>
+
             <div class="search-form__group search-form__group--family">
               <div class="search-form__label">
                 <label for="search-form-kids">Дети:</label>
