--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -32,7 +33,8 @@
             </ul>
             <ul class="main-nav__list user-nav">
               <li class="user-nav__item">
-                <a class="user-nav__link user-nav__link--search" href="#"><span class="visually-hidden">Поиск.</span></a>
+                <a class="user-nav__link user-nav__link--search" href="#"><span
+                    class="visually-hidden">Поиск.</span></a>
               </li>
               <li class="user-nav__item">
                 <a class="user-nav__link user-nav__link--like" href="#">
@@ -63,7 +65,7 @@
           <ul class="advantages__list">
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Настоящий&nbsp;  городок</p>
+                <p class="advantages__title third-title">Настоящий&nbsp; городок</p>
                 <p class="advantages__text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-1.jpg" width="800" height="385"
@@ -114,7 +116,8 @@
             </li>
             <li class="services__item services__item--gift">
               <p class="services__title third-title">Сувениры</p>
-              <p class="services__description">Не только китайского,&nbsp;<br> но и настоящего местного производства!</p>
+              <p class="services__description">Не только китайского,&nbsp;<br> но и настоящего местного производства!
+              </p>
             </li>
           </ul>
         </section>
@@ -125,7 +128,8 @@
             <p class="intro__text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
               в Седоне</p>
           </div>
-          <a class="search__button button button--basic button--big" href="index-modal.html">Поиск гостиницы в Седоне</a>
+          <a class="search__button button button--basic button--big" href="index-modal.html">Поиск гостиницы в
+            Седоне</a>
         </section>
         <section class="subscribe subscribe--bg" data-test="subscribe">
           <h2 class="visually-hidden">Форма подписки на рассылку.</h2>
@@ -148,17 +152,20 @@
         <div class="page-footer__wrapper wrapper">
           <ul class="page-footer__list socials">
             <li class="socials__item">
-              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+              <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy" target="_blank"
+                rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в ВКонтакте.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy ">
+              <a class="socials__link socials__link--tg" href="https://t.me/htmlacademy" target="_blank"
+                rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Телеграме.</span>
               </a>
             </li>
             <li class="socials__item">
-              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru">
+              <a class="socials__link socials__link--yt" href="https://www.youtube.com/user/htmlacademyru"
+                target="_blank" rel="noreferrer noopener">
                 <span class="visually-hidden">Мы в Ютубе.</span>
               </a>
             </li>
@@ -166,7 +173,7 @@
           <address class="page-footer__address address">
             <a class="address__phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-          <a class="page-footer__copyright" href="https://htmlacademy.ru/">
+          <a class="page-footer__copyright" href="https://htmlacademy.ru/" target="_blank" rel="noreferrer noopener">
             <span class="visually-hidden">Логотип HTML Academy.</span>
           </a>
         </div>
