Исправил замечания наставника

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
             </li>
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Красивая дорога</p>
+                <p class="advantages__title third-title">Красивая<br> дорога</p>
                 <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Мало туристов</p>
+                <p class="advantages__title third-title">Мало<br> туристов</p>
                 <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
             <li class="advantages__item">
               <div class="advantages__description">
-                <p class="advantages__title third-title">Там есть мост дьявола</p>
+                <p class="advantages__title third-title">Там есть<br> мост дьявола</p>
                 <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img class="advantages__img" src="images/advantage-photo-2.jpg" width="800" height="385"
