--- a/catalog.html
+++ b/catalog.html
@@ -112,11 +112,11 @@
                 <div class="range__inputs">
                   <label class="range__label">
                     <span class="range__input-text">от</span>
-                    <input class="range__input range__input--min input" type="text" inputmode="numeric" placeholder="0" value="0" name="min-price" required>
+                    <input class="range__input range__input--min input" type="text" inputmode="numeric" placeholder="0" value="0" name="min-price">
                   </label>
                   <label class="range__label">
                     <span class="range__input-text">до</span>
-                    <input class="range__input range__input--max input" type="text" inputmode="numeric" placeholder="10000" value="9000" name="max-price" required>
+                    <input class="range__input range__input--max input" type="text" inputmode="numeric" placeholder="10000" value="9000" name="max-price">
                   </label>
                 </div>
                 <div class="range__scale">
@@ -234,7 +234,7 @@
             </ul>
             <ul class="catalog__pagination pagination">
               <li class="pagination__item">
-                <a class="pagination__link pagination__link--current" href="#">1</a>
+                <a class="pagination__link pagination__link--current" aria-current="page">1</a>
               </li>
               <li class="pagination__item">
                 <a class="pagination__link" href="#">2</a>
