Исправил замечания к первой попытке защиты

--- a/catalog.html
+++ b/catalog.html
@@ -234,22 +234,22 @@
             </ul>
             <ul class="catalog__pagination pagination">
               <li class="pagination__item">
-                <a class="pagination__link pagination__link--current" aria-current="page">1</a>
+                <a class="pagination__link button button--second pagination__link--current" aria-current="page">1</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#">2</a>
+                <a class="pagination__link button button--second" href="#">2</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#">3</a>
+                <a class="pagination__link button button--second" href="#">3</a>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#">4</a>
+                <a class="pagination__link button button--second" href="#">4</a>
               </li>
               <li class="pagination__item">
-                <span class="pagination__link pagination__link--not-link">...</span>
+                <span class="pagination__link button pagination__link--not-link">...</span>
               </li>
               <li class="pagination__item">
-                <a class="pagination__link" href="#">10</a>
+                <a class="pagination__link button button--second" href="#">10</a>
               </li>
             </ul>
           </div>
